--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+node_modules
+.next
+.vercel
+.env
+dist
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 # Comprehensive .gitignore template for AI-generated projects
 # Covers most common languages, frameworks, and tools
 
